--- a/css/css.css
+++ b/css/css.css
@@ -19,15 +19,19 @@ ul {
 }
 
 h1 {
+	    text-shadow: 3px 3px #5B5B5A;
+
 	font-family: Arial;
-	font-size: 3rem;	
-	color: #46CB7F  ;
+	font-size: 4rem;	
 	margin:5px;
-	    text-align: center;
+	text-align: center;
+	color : #95E000;
 
 }
 
 h2 {
+		    text-shadow: 1px 1px #5B5B5A;
+
     font-family: Arial;
 	font-size: 20px;	
 	color: #FD844B  ;
@@ -38,6 +42,8 @@ h2 {
 }
 
 h3 {
+		    text-shadow: 1px 1px #5B5B5A;
+
     font-family: Arial;
 	font-size: 1rem;	
 	color: #000000  ;
@@ -55,42 +61,52 @@ main {
 
 
 
-.btn {
-  background: #3498db;
-  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
-  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
-  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
-  background-image: -o-linear-gradient(top, #3498db, #2980b9);
-  background-image: linear-gradient(to bottom, #3498db, #2980b9);
-  -webkit-border-radius: 28;
-  -moz-border-radius: 28;
-  border-radius: 28px;
-  font-family: Arial;
-  color: #ffffff;
-  font-size: 20px;
-  padding: 10px 20px 10px 20px;
-  text-decoration: none;
-  width: 130px;
+.BUTTON {
+	display:inline-block;
+    backface-visibility: hidden;
+  position: relative;
+  cursor: pointer;
+  display: inline-block;
+  white-space: nowrap;
+  background: linear-gradient(180deg,#f9f9f9 0%,#e0e0e0 100%);
+  border-radius: 100px;
+  border: 0.5px solid rgba(0%,0%,0%,0.2);
+  border-width: 0.5px 0.5px 0.5px 0.5px;
+  padding: 4px 22px 5px 22px;
+  box-shadow: 0px 1px 1px rgba(0%,0%,0%,0.6),0px 0px 5px #ffffff,0px 1px 0px 3px rgba(0%,0%,0%,0.2),inset 0px 1px 0px #ffffff;
+    color: #389300;
+  font-size: 16px;
+  font-family: Helvetica Neue;
+  font-weight: 900;
+  font-style: normal;
+  width: 8%;
+  table-layout: fixed;
+  border-collapse: collapse;
+  background-color: red; 
+  margin: 10px;
+  }
+  .BUTTON > div {
+    color: #999;
+  font-size: 10px;
+  font-family: Helvetica Neue;
+  font-weight: initial;
+  font-style: normal;
   text-align: center;
-  position: center;
-  margin: auto;
+  margin: 0px 0px 0px 0px
+  }
+  .BUTTON > i {
+    font-size: 1em;
+  border-radius: 0px;
+  border: 0px solid transparent;
+  border-width: 0px 0px 0px 0px;
+  padding: 0px 0px 0px 0px;
+  margin: 0px 0px 0px 0px;
+  position: static
+  }
+  .BUTTON > .ld {
+    font-size: initial
+  }
 
- 
-}
-
-.btn:hover {
-  background: #3cb0fd;
-  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
-  text-decoration: none;
-  width: 130px;
-  text-align: center;
-    margin: auto;
-
-}
 
 
 
